--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for zovfrontend
+# This is the resource bundle for zov
 
 #Texts for manifest.json
 
@@ -6,6 +6,29 @@
 appTitle=Ordem de Venda
 
 #YDES: Application description
-appDescription=Aplicativo Fiori para gerenciar ordens de venda.
+appDescription=App para gerenciar ordens de venda
 #XTIT: Main view title
 title=Ordem de Venda
+
+OrdemForm=Formulário de Ordem
+
+OrdemId=Id Ordem
+ClienteId=Id Cliente
+DataCriacao=Data Criação
+CriadoPor=Criado Por
+TotalItens=Total Itens
+TotalFrete=Total Frete
+TotalOrdem=Total Ordem
+Status=Status
+
+StatusN=Novo
+StatusL=Fornecido
+StatusF=Faturado
+StatusC=Cancelado
+
+ItemId=Item Id
+Material=Material
+Descricao=Descrição
+Quantidade=Quantidade
+PrecoUni=Preço Unitário
+PrecoTot=Preço Total
