--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,3 +32,13 @@ Descricao=Descrição
 Quantidade=Quantidade
 PrecoUni=Preço Unitário
 PrecoTot=Preço Total
+
+OrdemList=Lista de Ordens 
+
+OrdenacaoCampo=Ordenação
+OrdenacaoTipo=Tipo 
+Limite=Limite 
+Ignorar=Ignorar 
+ASC=Ascendente 
+DESC=Descendente 
+Opcoes=Opções 
