CRUDQ Atualização de Status - Function Import

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -33,6 +33,9 @@ Quantidade=Quantidade
 PrecoUni=Preço Unitário
 PrecoTot=Preço Total
 
+Tipo=Tipo
+Mensagem=Mensagem
+
 OrdemList=Lista de Ordens 
 
 OrdenacaoCampo=Ordenação
